@@ -1,4 +1,4 @@
-AC_INIT([GConf],[2.21.1],[http://bugzilla.gnome.org/enter_bug.cgi?product=GConf],[GConf])
+AC_INIT([GConf],[2.21.2],[http://bugzilla.gnome.org/enter_bug.cgi?product=GConf],[GConf])
 
 AC_DEFUN([AC_FYI], [echo "FYI: " $1])
 
@@ -78,7 +78,7 @@ GCONF_CURRENT=5
 
 dnl increment any time the source changes; set to 
 dnl  0 if you increment CURRENT
-GCONF_REVISION=3
+GCONF_REVISION=4
 
 dnl increment if any interfaces have been added; set to 0
 dnl  if any interfaces have been removed. removal has 
