@@ -21,14 +21,13 @@ To change the gconftool target use the - -config-source=blah option to gconftool
       <owner>basic-gconf-app</owner>
       <type>string</type>
       <locale name="C">
-        <default>Blah blah blurgh</default>
+        <default>default value</default>
         <short>short description in C locale</short>
-        <long>long description of foo and bar in C locale</long>
+        <long>Long description of foo and bar in C locale.</long>
       </locale>
-      <locale name="no">
-        <default>some thing in norwegian</default>
-        <short>short description in Norway</short>
-        <long>Long description in Norway. long long long. this is a long sentence.</long>
+      <locale name="nb">
+        <short>Short description in Norwegian</short>
+        <long>Long description in Norwegian. Long long long. This is a long sentence.</long>
       </locale>
     </schema>
       <schema>
@@ -37,14 +36,13 @@ To change the gconftool target use the - -config-source=blah option to gconftool
       <owner>basic-gconf-app</owner>
       <type>string</type>
       <locale name="C">
-        <default>Zzzzzzzzzz</default>
-        <short>short description in C locale</short>
-        <long>long description of baz in C locale</long>
+        <default>default value</default>
+        <short>Short description in C locale</short>
+        <long>Long description of baz in C locale.</long>
       </locale>
-      <locale name="no">
-        <default>some thing in norwegian</default>
-        <short>short description in Norway</short>
-        <long>Long description in Norway. long long long. this is a long sentence.</long>
+      <locale name="nb">
+        <short>Short description in Norwegian</short>
+        <long>Long description in Norwegian. Long long long. This is a long sentence.</long>
       </locale>
     </schema>
       <schema>
@@ -53,20 +51,16 @@ To change the gconftool target use the - -config-source=blah option to gconftool
       <owner>basic-gconf-app</owner>
       <type>string</type>
       <locale name="C">
-        <default>bllllllaaaaaaaaaaaaaaaaarrrrrrggggggghhhhh</default>
-        <short>short description in C locale</short>
-        <long>long description of blah in C locale</long>
+        <default>default value</default>
+        <short>Short description in C locale</short>
+        <long>Long description of blah in C locale.</long>
       </locale>
       <locale name="no">
-        <default>some thing in norwegian</default>
-        <short>short description in Norway</short>
-        <long>Long description in Norway. long long long. this is a long sentence.</long>
+        <short>Short description in Norwegian</short>
+        <long>Long description in Norwegian. Long long long. This is a long sentence.</long>
       </locale>
     </schema>
   </schemalist>
   
 </gconfschemafile>
-
-
-
 
