@@ -1,3 +1,15 @@
+2008-01-10  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* configure.in: Bump version
+	* backends/xml-dir.c:
+	* examples/basic-gconf-app.schemas:
+	* examples/simple-controller.c:
+	* examples/simple-view.c:
+	* gconf/gconf-changeset.c:
+	* gconf/gconf.c:
+	Mark some functions and variables static.
+	Closes bug #142295.
+
 2008-01-09  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* gconf-2.0.pc.in: glib-2.0, not glib. Thanks
